--- a/src/main/resources/templates/tutorpracticas/dashboard.html
+++ b/src/main/resources/templates/tutorpracticas/dashboard.html
@@ -95,18 +95,32 @@
                                     <th>Alumno</th>
                                     <th>Curso</th>
                                     <th>Fecha Inicio</th>
-                                    <th>Horas Completadas</th>
+                                    <th>Horas totales </th>
+                                    <th>Horas Consumidas</th>
+                                    <th>Horas Restantes</th>
                                     <th>Acciones</th>
                                 </tr>
+                                <!-- <tr>
+                                <p th:each="alumno : ${alumnos}">
+    								<span th:text="${alumno.nombre + ' ' + alumno.apellidos}"></span> - 
+   									 Horas realizadas: <span th:text="${horasPorAlumno[alumno.id.toString()]}"></span> h
+								</p>
+                                
+                                </tr> -->
+
                             </thead>
                             <tbody>
                                 <tr th:each="alumno : ${alumnos}">
                                     <td th:text="${alumno.nombre + ' ' + alumno.apellidos}"></td>
                                     <td th:text="${alumno.curso != null ? alumno.curso.nombre : 'N/A'}"></td>
-                                    <td th:text="${alumno.fechaInicioPracticas != null ? #temporals.format(alumno.fechaInicioPracticas, 'dd/MM/yyyy') : 'N/A'}"></td>
-                                    <td th:text="${alumno.horasTotales != null ? alumno.horasTotales : 0} + ' h'"></td>
+                                    <td th:text="${alumno.fechaInicio != null ? #temporals.format(alumno.fechaInicio, 'dd/MM/yyyy') : 'N/A'}"></td>
+                                    <td th:text="${alumno.duracionPracticas!= null ? alumno.duracionPracticas : 0} + ' h'"></td>
+   									<td th:text="${horasPorAlumno[alumno.id.toString()] != null ? horasPorAlumno[alumno.id.toString()] : 0} + ' h'"></td>
+                                    <td th:text="${horasPendientes[alumno.id] != null ? horasPendientes[alumno.id] : 0} + ' h'"></td>
+                                    
                                     <td>
-                                        <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                        <a href="#" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i></a>
+                                        
                                     </td>
                                 </tr>
                                 <tr th:if="${#lists.isEmpty(alumnos)}">
