--- a/src/main/resources/templates/enconstruccion.html
+++ b/src/main/resources/templates/enconstruccion.html
@@ -9,11 +9,11 @@
         <!-- Contenido central -->
         <div class="text-center">
             <!-- Imagen o figura de albañil -->
-            <img src="/static/img/cranes-worker-svgrepo-com.svg"    alt="Albañil en construcción"
-     style="width:120px; height:auto; margin-bottom:20px;">
+<img th:src="@{/img/cranes-worker-svgrepo-com.svg}" alt="Albañil en construcción"
+     style="width:300px; height:auto; margin-bottom:20px;">
 <h2 class="text-warning">🚧 ¡En Construcción! 🚧</h2>
             <p class="lead mt-3">Esta sección todavía no está disponible. Estamos trabajando para traerla pronto.</p>
-            <a th:href="@{/dashboard}" class="btn btn-primary mt-3">Volver al Dashboard</a>
+           
         </div>
     </div>
 </div>
