--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -137,13 +137,18 @@
                 <a class="nav-link" th:href="@{/alumno/observaciondiaria/listar}">
                     <i class="bi bi-journal-text me-2"></i>Observaciones
                 </a>
-                <a class="nav-link" th:href="@{/alumno/evaluaciones}">
+                <a class="nav-link" th:href="@{/alumno/evaluacion/listar}">
                     <i class="bi bi-clipboard-check me-2"></i>Evaluaciones
                 </a>
-                <a class="nav-link" th:href="@{/alumno/incidencias}">
+                <a class="nav-link" th:href="@{/alumno/evaluacion/incidencia}">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencias
                 </a>
             </div>
+                 <a class="nav-link" th:href="@{/comun/cambiar-password}">
+    				<i class="bi bi-key me-2"></i>Cambio de contraseña
+				 </a>
+            
+            
         </nav>
     </div>
     
