--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,7 +13,7 @@
 <h2 class="text-warning">🚧 ¡Error! 🚧</h2>
             <h3 class="lead mt-3">posiblemente no haya datos con las especificaciones indicadas, 
             o el tutor cargado no tiene alumnos, o el alumno no tiene cursos. </h3> <br>
-            <p>ya sabes, una roca en el camino te enseñó que tu destino era rodar y rodar</p>
+            <h3>ya sabes, una piedra en el camino te enseñó que tu destino era rodar y rodar</h3>
             
         </div>
     </div>
