--- a/src/main/resources/templates/admin/evaluacion/capacidades.html
+++ b/src/main/resources/templates/admin/evaluacion/capacidades.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
-<head>
-    <title>Capacidades de Evaluación</title>
-</head>
-<body>
-    <div layout:fragment="content">
+<html>
+    <div th:fragment="content">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h2>
@@ -17,7 +10,7 @@
                     <a th:href="@{/admin/evaluacion/listar}" class="btn btn-secondary me-2">
                         <i class="bi bi-arrow-left"></i> Volver
                     </a>
-                    <a th:href="@{/admin/evaluacion/capacidad/nueva}" class="btn btn-primary">
+                    <a th:href="@{/admin/evaluacion/capacidades/nuevo}" class="btn btn-primary">
                         <i class="bi bi-plus-circle"></i> Nueva Capacidad
                     </a>
                 </div>
@@ -81,12 +74,12 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="btn-group" role="group">
-                                            <a th:href="@{/admin/evaluacion/capacidad/editar/{id}(id=${capacidad.id})}" 
+                                            <a th:href="@{/admin/evaluacion/capacidades/editar/{id}(id=${capacidad.id})}" 
                                                class="btn btn-sm btn-warning" 
                                                title="Editar">
                                                 <i class="bi bi-pencil"></i>
                                             </a>
-                                            <form th:action="@{/admin/evaluacion/capacidad/activar/{id}(id=${capacidad.id})}" 
+                                            <form th:action="@{/admin/evaluacion/capacidades/activar/{id}(id=${capacidad.id})}" 
                                                   method="post" 
                                                   style="display: inline;">
                                                 <button type="submit" 
@@ -143,5 +136,4 @@
             </div>
         </div>
     </div>
-</body>
 </html>
