--- a/src/main/resources/templates/admin/evaluacion/criterios-lista.html
+++ b/src/main/resources/templates/admin/evaluacion/criterios-lista.html
@@ -9,10 +9,14 @@
                 <h2>
                     <i class="bi bi-clipboard-data me-2"></i>
                     Criterios de Evaluación
-                </h2>
-                <a th:href="@{/admin/evaluacion/criterios/nuevo}" class="btn btn-primary">
+                    <a th:href="@{/admin/evaluacion/criterios/nuevo}" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i> Nuevo Criterio
                 </a>
+                </h2>
+                
+                <a th:href="@{/admin/evaluacion/listar}" class="btn btn-secondary">
+    					<i class="fas fa-arrow-left"></i> Volver a evaluaciones
+				</a>
             </div>
 
             <!-- Mensajes de éxito -->
